crates/wac-parser/tests/resolution/fail/self-instantiation.wac
package foo:bar;

let i = new foo:bar {};
